contentセクションの日本語翻訳を完了

--- a/context/@-symbols/@-code.mdx
+++ b/context/@-symbols/@-code.mdx
@@ -4,26 +4,26 @@ title: "@Code"
 
 ### `@Code`
 
-To reference specific sections of code, you can use the `@Code` symbol.
+コードの特定のセクションを参照するには、`@Code`シンボルを使用できます。
 
 
-### Code Preview
+### コードプレビュー
 
-Similar to the [`@Files`](/context/@-symbols/@-files) symbol, Cursor will show a preview of the code's content so you can verify that the code you're referencing is the correct one.
+[`@Files`](/context/@-symbols/@-files) シンボルと同様に、Cursorは参照しているコードが正しいものであることを確認できるように、コードの内容のプレビューを表示します。
 
 <Frame>
 <img src="/images/context/@code.png"/>
 </Frame>
 
 
-### From the Editor
+### エディターから
 
-Another way to add code snippets as context is to select the code you want to reference, and click on either "Add to Chat" (`Ctrl/⌘ Shift L`) or "Add to Edit" (`Ctrl/⌘ Shift K`).
+コードスニペットをコンテキストとして追加するもう1つの方法は、参照したいコードを選択し、"Add to Chat"（`Ctrl/⌘ Shift L`）または"Add to Edit"（`Ctrl/⌘ Shift K`）をクリックすることです。
 
-These will add the selected code snippet to either the Chat input box or the currently active Cmd K prompt bar.
+これらは選択したコードスニペットをチャット入力ボックスまたは現在アクティブなCmd Kプロンプトバーに追加します。
 
 <Frame>
 <img src="/images/context/@code-select.png"/>
 </Frame>
 
-To add a selected code to a new chat, you can press `Ctrl/⌘ L`.
+選択したコードを新しいチャットに追加するには、`Ctrl/⌘ L`を押します。
