--- a/context/@-symbols/@-definitions.mdx
+++ b/context/@-symbols/@-definitions.mdx
@@ -3,14 +3,13 @@ title: "@Definitions"
 ---
 
 <Info>
-This feature is currently only for Cmd K.
+この機能は現在、Cmd Kでのみ利用可能です。
 </Info>
 
 ### `@Definitions`
 
-The `@Definitions` symbol adds all nearby definitions to Cmd K as context.
+`@Definitions`シンボルは、近くにあるすべての定義をCmd Kのコンテキストとして追加します。
 
 <Frame>
 <img src="/images/context/@definitions.png" />
 </Frame>
-
