--- a/context/@-symbols/@-docs.mdx
+++ b/context/@-symbols/@-docs.mdx
@@ -8,30 +8,28 @@ title: "@Docs"
 <img src="/images/context/@docs.png"/>
 </Frame>
 
-Cursor comes with a set of third party docs crawled, indexed, and ready to be used as context. You can access them by using the `@Docs` symbol.
+Cursorには、クロール、インデックス化され、コンテキストとして使用できるサードパーティのドキュメントが付属しています。`@Docs`シンボルを使用してアクセスできます。
 
-### Add Custom Docs
+### カスタムドキュメントの追加
 
-If you want to crawl and index custom docs that are not already provided, you can do so by `@Docs` > `Add new doc`. 
-The following modal will appear after you've pasted in the URL of your desired doc:
-
+提供されていないカスタムドキュメントをクロールしてインデックス化したい場合は、`@Docs` > `Add new doc`から行うことができます。
+目的のドキュメントのURLを貼り付けると、以下のようなモーダルが表示されます：
 
 <Frame>
 <img src="/images/context/@docs-add.png"/>
 </Frame>
 
-Cursor will then index and learn the doc, and you will be able to use it as context like any other doc.
+Cursorはドキュメントをインデックス化して学習し、他のドキュメントと同様にコンテキストとして使用できるようになります。
 
 <Frame>
 <img src="/images/context/@docs-learning.png"/>
 </Frame>
 
-### Manage Custom Docs
+### カスタムドキュメントの管理
 
-Under `Cursor Settings` > `Features` > `Docs`, you will see the docs you have added.
-You can edit, delete, or add new docs here.
+`Cursor Settings` > `Features` > `Docs`で、追加したドキュメントを確認できます。
+ここでドキュメントの編集、削除、新規追加が可能です。
 
 <Frame>
 <img src="/images/context/@docs-manage.png"/>
 </Frame>
-
