--- a/context/@-symbols/@-folders.mdx
+++ b/context/@-symbols/@-folders.mdx
@@ -3,15 +3,14 @@ title: "@Folders"
 ---
 
 <Info>
-Currently, `@Folders` is only supported in the Cursor Chat.
+現在、`@Folders`はCursorチャットでのみサポートされています。
 </Info>
 
 ### `@Folders`
 
-You can also reference entire folders in Cursor as context. `@Folders` is especially
-useful for [long context chat](/chat/overview#long-context-chat) where you want to provide a lot of context to the AI.
+Cursorではフォルダー全体をコンテキストとして参照することもできます。`@Folders`は特に
+[長文コンテキストチャット](/chat/overview#long-context-chat) でAIに多くのコンテキストを提供したい場合に便利です。
 
 <Frame>
 <img src="/images/context/@folder.png"/>
 </Frame>
-
