--- a/context/@-symbols/@-link.mdx
+++ b/context/@-symbols/@-link.mdx
@@ -1,22 +1,21 @@
 ---
-title: "Paste Links"
+title: "リンクの貼り付け"
 ---
 
 ### `@https://your-link.com`
 
-In order for Cursor to visit a link before responding, type `@` and then paste in the link. 
+Cursorが応答する前にリンクを訪問できるようにするには、`@`を入力してからリンクを貼り付けます。
 
 <Frame>
 <img src="/images/context/@link.png" />
 </Frame>
 
 
-### Remove Links
+### リンクの削除
 
-By default, we automatically parse links and turn them into `@Links` in Cursor Chat.
-If you prefer to have the link as plain text, click on the link and then click `Unlink`.
+デフォルトでは、リンクを自動的に解析してCursor Chatで`@Links`に変換します。
+リンクをプレーンテキストとして表示したい場合は、リンクをクリックして`Unlink`をクリックしてください。
 
 <Frame>
 <img src="/images/context/@link-unlink.png" />
 </Frame>
-
