--- a/context/@-symbols/basic.mdx
+++ b/context/@-symbols/basic.mdx
@@ -1,22 +1,18 @@
 ---
-title: Basic Usage 
+title: "基本的な使い方"
 ---
 
+CursorのAI入力ボックス（Cmd K、チャット、ターミナルCmd Kなど）では、`@`を入力することで@シンボルを使用できます。入力に基づいて最も関連性の高い候補のみを表示するポップアップメニューが表示されます。
 
-In Cursor's AI input boxes, such as in Cmd K, Chat, or Terminal Cmd K, you can use @ symbols by typing `@`. A popup menu will appear with a list of suggestions, 
-and it will automatically filter to only show the most relevant suggestions based on your input.
+### キーボードショートカット
 
-### Keyboard Shortcuts
-
-You can navigate through the list of suggestions using the up/down arrow keys. You can hit `Enter` to select a suggestion. If the suggestion is a category, such as `Files`,
-the suggestions will be filtered to only show the most relevant items within that category.
+上下の矢印キーを使用して候補リストを移動できます。`Enter`キーを押して候補を選択できます。候補が`Files`などのカテゴリーの場合、そのカテゴリー内の最も関連性の高い項目のみが表示されるようにフィルタリングされます。
 
 <Frame>
 <img src="/images/context/@-symbols-basics.png" />
 </Frame>
 
-### Cmd K Keyboard Shortcut
+### Cmd Kのキーボードショートカット
 
-You can use the up/down arrow key to navigate through the list of selected Cmd K @ symbols, `Enter` to expand/collapse the selected context item. For file references, you can use 
-`Ctrl/⌘ M` to toggle the file reading strategies. Read more about file reading strategies [here](/context/@-symbols/@-files#cmd-k-chunking-strategy).
-
+上下の矢印キーを使用して選択されたCmd K @シンボルのリストを移動し、`Enter`キーで選択されたコンテキスト項目を展開/折りたたむことができます。
+ファイル参照の場合、`Ctrl/⌘ M`を使用してファイル読み取り戦略を切り替えることができます。ファイル読み取り戦略の詳細については[こちら](/context/@-symbols/@-files#cmd-k-chunking-strategy) をご覧ください。
