--- a/context/rules-for-ai.mdx
+++ b/context/rules-for-ai.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Rules for AI"
+title: "AIのルール"
 ---
 
-You can add custom instructions to Cursor by modifying the `Rules for AI` section under `Cursor Settings` > `General` > `Rules for AI`.
+Cursorのカスタム指示は、`Cursor Settings` > `General` > `Rules for AI`セクションの`Rules for AI`を変更することで追加できます。
 
-This custom instruction will be included for features such as Cursor Chat and Ctrl/⌘ K.
+このカスタム指示は、Cursor ChatやCtrl/⌘ Kなどの機能に含まれます。
 
 <Frame>
 <img src="/images/context/rules-for-ai.png" />
@@ -12,6 +12,6 @@ This custom instruction will be included for features such as Cursor Chat and Ct
 
 ### `.cursorrules`
 
-For project-specific instructions, you can include the instructions in a `.cursorrules` file in the root of your project.
+プロジェクト固有の指示については、プロジェクトのルートディレクトリに`.cursorrules`ファイルを含めることができます。
 
-As the same as the "Rules for AI" section, the instructions in the `.cursorrules` file will be included for features such as Cursor Chat and Ctrl/⌘ K.
+"Rules for AI"セクションと同様に、`.cursorrules`ファイルの指示はCursor ChatやCtrl/⌘ Kなどの機能に含まれます。
