--- a/context/@-symbols/@-chat.mdx
+++ b/context/@-symbols/@-chat.mdx
@@ -3,15 +3,14 @@ title: "@Chat"
 ---
 
 <Info>
-This feature is currently only for Cmd K.
+この機能は現在Cmd Kでのみ利用可能です。
 </Info>
 
 ### `@Chat`
 
-You can add your current chat messages as context by using `@Chat` inside Cmd K. 
-This is useful for when you have a conversation with the AI that you'd like to be applied to edit or generate code.
+Cmd K内で`@Chat`を使用することで、現在のチャットメッセージをコンテキストとして追加できます。
+これは、AIとの会話をコードの編集や生成に活用したい場合に便利です。
 
 <Frame>
 <img src="/images/context/@chat.png" />
 </Frame>
-
