--- a/context/@-symbols/@-codebase.mdx
+++ b/context/@-symbols/@-codebase.mdx
@@ -8,17 +8,16 @@ title: "@Codebase"
 <img src="/images/chat/@codebase.png" />
 </Frame>
 
-Through `@Codebase`, Cursor Chat goes through these steps until it finds the most important pieces of code to use.
+`@Codebase`を使用すると、Cursor Chatは最も重要なコードを見つけるために以下のステップを実行します。
 
-- Gathering: scanning through your codebase for important files / code chunks
-- Reranking: reordering the context items based on relevancy to the query
-- Reasoning: thinking through a plan of using the context 
-- Generating: coming up with a response
+- 収集: コードベースから重要なファイルやコードチャンクをスキャン
+- 再ランク付け: クエリとの関連性に基づいてコンテキストアイテムを並び替え
+- 推論: コンテキストの使用計画を検討
+- 生成: 応答を作成
 
-Another way of submitting an advanced codebase query is to click on the dropdown next to the `Ctrl/⌘ + Enter` button and select `reranker` for the search behavior.
-This is only available when `@Codebase` isn't used, otherwise `@Codebase` takes precedence.
+高度なコードベースクエリを実行するもう1つの方法は、`Ctrl/⌘ + Enter`ボタンの横にあるドロップダウンをクリックし、検索動作として`reranker`を選択することです。
+これは`@Codebase`が使用されていない場合にのみ利用可能で、`@Codebase`が使用されている場合は`@Codebase`が優先されます。
 
 <Frame>
 <img src="/images/chat/codebase-dropdown.png" />
 </Frame>
-
