--- a/context/@-symbols/@-git.mdx
+++ b/context/@-symbols/@-git.mdx
@@ -3,29 +3,28 @@ title: "@Git"
 ---
 
 <Info>
-Currently, `@Git` is only supported in the Cursor Chat.
+現在、`@Git`はCursor Chatでのみサポートされています。
 </Info>
 
 ### `@Git`
 
-In Cursor's Chat, you can use `@Git` to add git commits, diffs, or pull requests to your prompt.
+Cursor Chatでは、`@Git`を使用してgitのコミット、差分、またはプルリクエストをプロンプトに追加できます。
 
 <Frame>
 <img src="/images/context/@git.png"/>
 </Frame>
 
 
-### Common Use Cases
+### 一般的な使用例
 
-One common use case for `@Git` is to allow Cursor's AI to scan the diff and look for bugs or issues that could be caused by the diff.
+`@Git`の一般的な使用例の1つは、Cursor AIに差分をスキャンさせ、その差分によって引き起こされる可能性のあるバグや問題を探すことです。
 
 <Frame>
 <img src="/images/context/@git-usecase1.png"/>
 </Frame>
 
-You could also use `@Diff of Working State` to generate a commit message from your current diffs.
+また、`@Diff of Working State`を使用して、現在の差分からコミットメッセージを生成することもできます。
 
 <Frame>
 <img src="/images/context/@git-commit-message.png"/>
 </Frame>
-
