--- a/context/@-symbols/@-web.mdx
+++ b/context/@-symbols/@-web.mdx
@@ -8,11 +8,6 @@ title: "@Web"
 <img src="/images/context/@web.png" />
 </Frame>
 
-With `@Web`, Cursor constructs a search query based on the query and the context you've provided, and searches the web to 
-find relevant information as additional context. This is particulary useful for finding the most up-to-date information.
+`@Web`を使用すると、Cursorは提供されたクエリとコンテキストに基づいて検索クエリを構築し、追加のコンテキストとして関連情報をウェブから検索します。
 
-### Always On
-
-You can make Cursor search the web for chat on every query by turning on "Always search the web" under `Cursor settings` > `Features` > `Chat`. This is
-equivalent to using `@web` on every query.
-
+これは、Cursorがオンラインで最新の情報を見つけたり、ユーザーが手動で検索する必要なく数秒で複数のウェブサイトをスクレイピングして最適な回答を見つけたりするのに役立ちます。
