ナビゲーションをCursorの英語のままにする。

--- a/advanced/api-keys.mdx
+++ b/advanced/api-keys.mdx
@@ -7,7 +7,7 @@ title: カスタムAPIキー
 
 Cursorでは、独自のOpenAI APIキーを入力することで、自己負担で好きなだけAIメッセージを送信することができます。
 
-APIキーは[こちら](https://platform.openai.com/account/api-keys)から取得できます。独自のAPIキーを使用するには、`Cursor設定` > `モデル` > `OpenAI APIキー`に移動し、APIキーを入力します。その後、「検証」ボタンをクリックします。キーが検証されると、OpenAI APIキーが有効になります。
+APIキーは[こちら](https://platform.openai.com/account/api-keys)から取得できます。独自のAPIキーを使用するには、`Cursor Settings` > `Models` > `OpenAI API Key`に移動し、APIキーを入力します。その後、「検証」ボタンをクリックします。キーが検証されると、OpenAI APIキーが有効になります。
 
 <Frame>
   <img src="/images/misc/openai-api.png" />
