--- a/advanced/models.mdx
+++ b/advanced/models.mdx
@@ -15,7 +15,7 @@ AIの入力ボックスの下に、使用したいモデルを選択できるド
 - `cursor-small`
   - `cursor-small`はCursor独自のモデルで、`GPT-4`ほど賢くはありませんが、より高速で、ユーザーは無制限にアクセスできます。
 
-`Cursor設定` > `モデル` > `モデル名`から追加のモデルを追加できます。
+`Cursor Settings` > `Models` > `Model names`から追加のモデルを追加できます。
 
 <Frame>
   <img src="/images/advanced/model-toggle.png" />
