--- a/chat/customize.mdx
+++ b/chat/customize.mdx
@@ -23,7 +23,7 @@ Cursor Chatは通常のエディタータブとして動作します。`Ctrl/⌘
 
 ### 設定
 
-Cursor Chatは`Cursor設定` > `機能` > `チャット`でカスタマイズできます。
+Cursor Chatは`Cursor Settings` > `Features` > `Chat`でカスタマイズできます。
 
 設定項目には以下が含まれます：
 
