--- a/context/codebase-indexing.mdx
+++ b/context/codebase-indexing.mdx
@@ -8,7 +8,7 @@ title: "コードベースのインデックス作成"
 
 コードベースのインデックスは、最新のコードベースの変更と自動的に同期されます。
 
-コードベースのインデックス作成の状態は、`Cursor設定` > `機能` > `コードベースのインデックス作成`で確認できます。
+コードベースのインデックス作成の状態は、`Cursor Settings` > `Features` > `Codebase Indexing`で確認できます。
 
 <Frame>
 <img src="/images/chat/codebase-indexing.png" />
@@ -21,4 +21,4 @@ title: "コードベースのインデックス作成"
 `設定を表示`セクションを展開して、より詳細なオプションにアクセスすることもできます。
 ここでは、新しいリポジトリの自動インデックス作成を有効にするかどうかを決定し、.gitignore設定に加えて、リポジトリのインデックス作成時にCursorが無視するファイルを設定することができます。
 
-プロジェクト内にAIが読む必要のない大きなコンテンツファイルがある場合、[それらのファイルを無視する](/context/ignore-files) ことで回答の精度を向上させることができます。
+プロジェクト内にAIが読む必要のない大きなコンテンツファイルがある場合、[除外ファイル](/context/ignore-files) ことで回答の精度を向上させることができます。
