--- a/privacy/privacy.mdx
+++ b/privacy/privacy.mdx
@@ -6,7 +6,7 @@ title: プライバシーFAQ
 
 `プライバシーモード`を使用すると、あなたのコードは当社や第三者によって保存されることはありません（ビジネスプランを利用していない場合、OpenAIは信頼性と安全性のために送信されたプロンプトを30日間保持します）。それ以外の場合、Cursorの改善のためにプロンプトの保存やテレメトリデータの収集を行う場合があります。
 
-`プライバシーモード`は、`Cursor設定` > `一般` > `プライバシーモード`で有効にできます。
+`プライバシーモード`は、`Cursor Settings` > `General` > `Privacy Mode`で有効にできます。
 
 <Frame>
   <img src="/images/get-started/privacy-mode.png" alt="プライバシーモード" />
