fix: Update @ symbols link path from relative to absolute
Changed the link path from relative format (context/@-symbols) to absolute format (/context/@-symbols) to ensure proper navigation.

--- a/cmdk/overview.mdx
+++ b/cmdk/overview.mdx
@@ -11,7 +11,7 @@ Cmd K, also known or "Ctrl K" on Windows/Linux, allows you to generate new code 
 ### Prompt Bars 
 
 In Cursor, we call the bar that appears when you press `Ctrl/Cmd K` the "Prompt Bar". It works similarly to the AI input box for chat, in 
-which you can type normally, or use [@ symbols](context/@-symbols) to reference other context. 
+which you can type normally, or use [@ symbols](/context/@-symbols) to reference other context. 
 
 
 ### Inline Generation
